fix LoanSummary gradient text rendering on iOS

--- a/src/modules/CreditCalculator/components/LoanSummary/LoanSummary.module.css
+++ b/src/modules/CreditCalculator/components/LoanSummary/LoanSummary.module.css
@@ -69,10 +69,14 @@
 }
 
 .discountedRate {
+  display: inline-block;
   font-size: 17px;
   font-weight: 800;
   line-height: 22px;
   letter-spacing: -0.2px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  color: var(--color-text-primary);
   /* stylelint-disable-next-line property-no-vendor-prefix */
   -webkit-background-clip: text;
   background-clip: text;
